URI to URL, to match azure http client