@@ -8,8 +8,8 @@ import org.hamcrest.Matchers;
 import org.junit.*;
 import org.junit.rules.ExpectedException;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.UUID;
 
 import static org.hamcrest.Matchers.*;
@@ -39,30 +39,30 @@ public class ConnectionStringParsingTests {
 
         ConnectionString.parseInto(cs, telemetryClient);
         assertEquals(ikey, telemetryClient.getInstrumentationKey());
-        assertEquals(URI.create(Defaults.INGESTION_ENDPOINT), telemetryClient.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(URI.create(Defaults.INGESTION_ENDPOINT + "/" + EndpointProvider.INGESTION_URI_PATH), telemetryClient.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(URI.create(Defaults.LIVE_ENDPOINT + "/" + EndpointProvider.LIVE_URI_PATH), telemetryClient.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(new URL(Defaults.INGESTION_ENDPOINT), telemetryClient.getEndpointProvider().getIngestionEndpoint());
+        assertEquals(new URL(Defaults.INGESTION_ENDPOINT + "/" + EndpointProvider.INGESTION_URL_PATH), telemetryClient.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(new URL(Defaults.LIVE_ENDPOINT + "/" + EndpointProvider.LIVE_URL_PATH), telemetryClient.getEndpointProvider().getLiveEndpointUrl());
     }
 
     @Test // this test does not use this.config
-    public void appIdUrlIsConstructedWithIkeyFromIngestionEndpoint() {
+    public void appIdUrlIsConstructedWithIkeyFromIngestionEndpoint() throws MalformedURLException {
         EndpointProvider ep = new EndpointProvider();
         String ikey = "fake-ikey";
         final String host = "http://123.com";
-        ep.setIngestionEndpoint(URI.create(host));
-        assertEquals(URI.create(host+"/"+EndpointProvider.API_PROFILES_APP_ID_URI_PREFIX+ikey+EndpointProvider.API_PROFILES_APP_ID_URI_SUFFIX), ep.getAppIdEndpointURL(ikey));
+        ep.setIngestionEndpoint(new URL(host));
+        assertEquals(new URL(host+"/"+EndpointProvider.API_PROFILES_APP_ID_URL_PREFIX +ikey+EndpointProvider.API_PROFILES_APP_ID_URL_SUFFIX), ep.getAppIdEndpointUrl(ikey));
     }
 
     @Test
-    public void appIdUrlWithPathKeepsIt() {
+    public void appIdUrlWithPathKeepsIt() throws MalformedURLException {
         EndpointProvider ep = new EndpointProvider();
         String ikey = "fake-ikey";
         String url = "http://123.com/path/321";
-        ep.setIngestionEndpoint(URI.create(url));
-        assertEquals(URI.create(url+"/"+EndpointProvider.API_PROFILES_APP_ID_URI_PREFIX+ikey+EndpointProvider.API_PROFILES_APP_ID_URI_SUFFIX), ep.getAppIdEndpointURL(ikey));
+        ep.setIngestionEndpoint(new URL(url));
+        assertEquals(new URL(url+"/"+EndpointProvider.API_PROFILES_APP_ID_URL_PREFIX +ikey+EndpointProvider.API_PROFILES_APP_ID_URL_SUFFIX), ep.getAppIdEndpointUrl(ikey));
 
-        ep.setIngestionEndpoint(URI.create(url+"/"));
-        assertEquals(URI.create(url+"/"+EndpointProvider.API_PROFILES_APP_ID_URI_PREFIX+ikey+EndpointProvider.API_PROFILES_APP_ID_URI_SUFFIX), ep.getAppIdEndpointURL(ikey));
+        ep.setIngestionEndpoint(new URL(url+"/"));
+        assertEquals(new URL(url+"/"+EndpointProvider.API_PROFILES_APP_ID_URL_PREFIX +ikey+EndpointProvider.API_PROFILES_APP_ID_URL_SUFFIX), ep.getAppIdEndpointUrl(ikey));
     }
 
     @Test
@@ -70,15 +70,15 @@ public class ConnectionStringParsingTests {
         final String ikey = "fake-ikey";
         final String suffix = "ai.example.com";
         final String cs = "InstrumentationKey="+ikey+";EndpointSuffix="+suffix;
-        final URI expectedIngestionEndpoint = URI.create("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix);
-        final URI expectedIngestionEndpointURL = URI.create("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.INGESTION_URI_PATH);
-        final URI expectedLiveEndpoint = URI.create("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.LIVE_URI_PATH);
+        final URL expectedIngestionEndpoint = new URL("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix);
+        final URL expectedIngestionEndpointURL = new URL("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.INGESTION_URL_PATH);
+        final URL expectedLiveEndpoint = new URL("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.LIVE_URL_PATH);
 
         ConnectionString.parseInto(cs, telemetryClient);
         assertEquals(ikey, telemetryClient.getInstrumentationKey());
         assertEquals(expectedIngestionEndpoint, telemetryClient.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointUrl());
     }
 
     @Test
@@ -86,15 +86,15 @@ public class ConnectionStringParsingTests {
         final String ikey = "fake-ikey";
         final String suffix = "ai.example.com/my-proxy-app/doProxy";
         final String cs = "InstrumentationKey="+ikey+";EndpointSuffix="+suffix;
-        final URI expectedIngestionEndpoint = URI.create("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix);
-        final URI expectedIngestionEndpointURL = URI.create("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.INGESTION_URI_PATH);
-        final URI expectedLiveEndpoint = URI.create("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.LIVE_URI_PATH);
+        final URL expectedIngestionEndpoint = new URL("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix);
+        final URL expectedIngestionEndpointURL = new URL("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.INGESTION_URL_PATH);
+        final URL expectedLiveEndpoint = new URL("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.LIVE_URL_PATH);
 
         ConnectionString.parseInto(cs, telemetryClient);
         assertEquals(ikey, telemetryClient.getInstrumentationKey());
         assertEquals(expectedIngestionEndpoint, telemetryClient.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointUrl());
     }
 
     @Test
@@ -102,57 +102,57 @@ public class ConnectionStringParsingTests {
         final String ikey = "fake-ikey";
         final String suffix = "ai.example.com:9999";
         final String cs = "InstrumentationKey="+ikey+";EndpointSuffix="+suffix;
-        final URI expectedIngestionEndpoint = URI.create("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix);
-        final URI expectedIngestionEndpointURL = URI.create("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.INGESTION_URI_PATH);
-        final URI expectedLiveEndpoint = URI.create("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.LIVE_URI_PATH);
+        final URL expectedIngestionEndpoint = new URL("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix);
+        final URL expectedIngestionEndpointURL = new URL("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.INGESTION_URL_PATH);
+        final URL expectedLiveEndpoint = new URL("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.LIVE_URL_PATH);
 
         ConnectionString.parseInto(cs, telemetryClient);
         assertEquals(ikey, telemetryClient.getInstrumentationKey());
         assertEquals(expectedIngestionEndpoint, telemetryClient.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointUrl());
     }
 
     @Test
     public void ikeyWithExplicitEndpoints() throws Exception {
         final String ikey = "fake-ikey";
-        final URI expectedIngestionEndpoint = URI.create("https://ingestion.example.com");
-        final URI expectedIngestionEndpointURL = URI.create("https://ingestion.example.com/" + EndpointProvider.INGESTION_URI_PATH);
+        final URL expectedIngestionEndpoint = new URL("https://ingestion.example.com");
+        final URL expectedIngestionEndpointURL = new URL("https://ingestion.example.com/" + EndpointProvider.INGESTION_URL_PATH);
         final String liveHost = "https://live.example.com";
-        final URI expectedLiveEndpoint = URI.create(liveHost + "/" + EndpointProvider.LIVE_URI_PATH);
+        final URL expectedLiveEndpoint = new URL(liveHost + "/" + EndpointProvider.LIVE_URL_PATH);
         final String cs = "InstrumentationKey="+ikey+";IngestionEndpoint="+expectedIngestionEndpoint+";LiveEndpoint="+liveHost;
 
         ConnectionString.parseInto(cs, telemetryClient);
         assertEquals(ikey, telemetryClient.getInstrumentationKey());
         assertEquals(expectedIngestionEndpoint, telemetryClient.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointUrl());
     }
 
     @Test
     public void explicitEndpointOverridesSuffix() throws Exception {
         final String ikey = "fake-ikey";
         final String suffix = "ai.example.com";
-        final URI expectedIngestionEndpoint = URI.create("https://ingestion.example.com");
-        final URI expectedIngestionEndpointURL = URI.create("https://ingestion.example.com/" + EndpointProvider.INGESTION_URI_PATH);
-        final URI expectedLiveEndpoint = URI.create("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix+"/"+EndpointProvider.LIVE_URI_PATH);
+        final URL expectedIngestionEndpoint = new URL("https://ingestion.example.com");
+        final URL expectedIngestionEndpointURL = new URL("https://ingestion.example.com/" + EndpointProvider.INGESTION_URL_PATH);
+        final URL expectedLiveEndpoint = new URL("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix+"/"+EndpointProvider.LIVE_URL_PATH);
         final String cs = "InstrumentationKey="+ikey+";IngestionEndpoint="+expectedIngestionEndpoint+";EndpointSuffix="+suffix;
 
         ConnectionString.parseInto(cs, telemetryClient);
         assertEquals(ikey, telemetryClient.getInstrumentationKey());
         assertEquals(expectedIngestionEndpoint, telemetryClient.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointUrl());
     }
 
     @Test
-    public void emptyPairIsIgnored() {
+    public void emptyPairIsIgnored() throws MalformedURLException {
         final String ikey = "fake-ikey";
         final String suffix = "ai.example.com";
         final String cs = "InstrumentationKey="+ikey+";;EndpointSuffix="+suffix+";";
-        final URI expectedIngestionEndpoint = URI.create("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix);
-        final URI expectedIngestionEndpointURL = URI.create("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix+"/" + EndpointProvider.INGESTION_URI_PATH);
-        final URI expectedLiveEndpoint = URI.create("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.LIVE_URI_PATH);
+        final URL expectedIngestionEndpoint = new URL("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix);
+        final URL expectedIngestionEndpointURL = new URL("https://"+EndpointPrefixes.INGESTION_ENDPOINT_PREFIX+"."+suffix+"/" + EndpointProvider.INGESTION_URL_PATH);
+        final URL expectedLiveEndpoint = new URL("https://"+EndpointPrefixes.LIVE_ENDPOINT_PREFIX+"."+suffix + "/" + EndpointProvider.LIVE_URL_PATH);
         try {
             ConnectionString.parseInto(cs, telemetryClient);
         } catch (Exception e) {
@@ -160,17 +160,17 @@ public class ConnectionStringParsingTests {
         }
         assertEquals(ikey, telemetryClient.getInstrumentationKey());
         assertEquals(expectedIngestionEndpoint, telemetryClient.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointUrl());
     }
 
     @Test
-    public void emptyKeyIsIgnored() {
+    public void emptyKeyIsIgnored() throws MalformedURLException {
         final String ikey = "fake-ikey";
         final String cs = "InstrumentationKey="+ikey+";=1234";
-        final URI expectedIngestionEndpoint = URI.create(Defaults.INGESTION_ENDPOINT);
-        final URI expectedIngestionEndpointURL = URI.create(Defaults.INGESTION_ENDPOINT+"/"+EndpointProvider.INGESTION_URI_PATH);
-        final URI expectedLiveEndpoint = URI.create(Defaults.LIVE_ENDPOINT + "/" + EndpointProvider.LIVE_URI_PATH);
+        final URL expectedIngestionEndpoint = new URL(Defaults.INGESTION_ENDPOINT);
+        final URL expectedIngestionEndpointURL = new URL(Defaults.INGESTION_ENDPOINT+"/"+EndpointProvider.INGESTION_URL_PATH);
+        final URL expectedLiveEndpoint = new URL(Defaults.LIVE_ENDPOINT + "/" + EndpointProvider.LIVE_URL_PATH);
         try {
             ConnectionString.parseInto(cs, telemetryClient);
         } catch (Exception e) {
@@ -178,8 +178,8 @@ public class ConnectionStringParsingTests {
         }
         assertEquals(ikey, telemetryClient.getInstrumentationKey());
         assertEquals(expectedIngestionEndpoint, telemetryClient.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(expectedIngestionEndpointURL, telemetryClient.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(expectedLiveEndpoint, telemetryClient.getEndpointProvider().getLiveEndpointUrl());
     }
 
     @Test
@@ -189,9 +189,9 @@ public class ConnectionStringParsingTests {
 
         ConnectionString.parseInto(cs, telemetryClient);
         assertEquals(ikey, telemetryClient.getInstrumentationKey());
-        assertEquals(URI.create(Defaults.INGESTION_ENDPOINT), telemetryClient.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(URI.create(Defaults.INGESTION_ENDPOINT + "/" + EndpointProvider.INGESTION_URI_PATH), telemetryClient.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(URI.create(Defaults.LIVE_ENDPOINT + "/" + EndpointProvider.LIVE_URI_PATH), telemetryClient.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(new URL(Defaults.INGESTION_ENDPOINT), telemetryClient.getEndpointProvider().getIngestionEndpoint());
+        assertEquals(new URL(Defaults.INGESTION_ENDPOINT + "/" + EndpointProvider.INGESTION_URL_PATH), telemetryClient.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(new URL(Defaults.LIVE_ENDPOINT + "/" + EndpointProvider.LIVE_URL_PATH), telemetryClient.getEndpointProvider().getLiveEndpointUrl());
     }
 
     @Test
@@ -209,8 +209,8 @@ public class ConnectionStringParsingTests {
 
         assertEquals(telemetryClient.getInstrumentationKey(), telemetryClient2.getInstrumentationKey());
         assertEquals(telemetryClient.getEndpointProvider().getIngestionEndpoint(), telemetryClient2.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(telemetryClient.getEndpointProvider().getIngestionEndpointURL(), telemetryClient2.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(telemetryClient.getEndpointProvider().getLiveEndpointURL(), telemetryClient2.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(telemetryClient.getEndpointProvider().getIngestionEndpointUrl(), telemetryClient2.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(telemetryClient.getEndpointProvider().getLiveEndpointUrl(), telemetryClient2.getEndpointProvider().getLiveEndpointUrl());
         assertEquals(telemetryClient.getEndpointProvider().getProfilerEndpoint(), telemetryClient2.getEndpointProvider().getProfilerEndpoint());
         assertEquals(telemetryClient.getEndpointProvider().getSnapshotEndpoint(), telemetryClient2.getEndpointProvider().getSnapshotEndpoint());
     }
@@ -231,8 +231,8 @@ public class ConnectionStringParsingTests {
 
         assertEquals(telemetryClient.getInstrumentationKey(), telemetryClient2.getInstrumentationKey());
         assertEquals(telemetryClient.getEndpointProvider().getIngestionEndpoint(), telemetryClient2.getEndpointProvider().getIngestionEndpoint());
-        assertEquals(telemetryClient.getEndpointProvider().getIngestionEndpointURL(), telemetryClient2.getEndpointProvider().getIngestionEndpointURL());
-        assertEquals(telemetryClient.getEndpointProvider().getLiveEndpointURL(), telemetryClient2.getEndpointProvider().getLiveEndpointURL());
+        assertEquals(telemetryClient.getEndpointProvider().getIngestionEndpointUrl(), telemetryClient2.getEndpointProvider().getIngestionEndpointUrl());
+        assertEquals(telemetryClient.getEndpointProvider().getLiveEndpointUrl(), telemetryClient2.getEndpointProvider().getLiveEndpointUrl());
         assertEquals(telemetryClient.getEndpointProvider().getProfilerEndpoint(), telemetryClient2.getEndpointProvider().getProfilerEndpoint());
         assertEquals(telemetryClient.getEndpointProvider().getSnapshotEndpoint(), telemetryClient2.getEndpointProvider().getSnapshotEndpoint());
     }
@@ -261,7 +261,7 @@ public class ConnectionStringParsingTests {
     @Test
     public void httpEndpointKeepsScheme() throws Exception {
         ConnectionString.parseInto("InstrumentationKey=fake-ikey;IngestionEndpoint=http://my-ai.example.com", telemetryClient);
-        assertEquals(URI.create("http://my-ai.example.com"), telemetryClient.getEndpointProvider().getIngestionEndpoint());
+        assertEquals(new URL("http://my-ai.example.com"), telemetryClient.getEndpointProvider().getIngestionEndpoint());
     }
 
     @Test
@@ -299,11 +299,11 @@ public class ConnectionStringParsingTests {
     }
 
     @Test
-    public void invalidUriIsInvalidConnectionString() throws Exception {
+    public void invalidUrlIsInvalidConnectionString() throws Exception {
         exception.expect(InvalidConnectionStringException.class);
-        exception.expectCause(Matchers.<Throwable>instanceOf(URISyntaxException.class));
+        exception.expectCause(Matchers.<Throwable>instanceOf(MalformedURLException.class));
         exception.expectMessage(containsString("LiveEndpoint"));
-        parseInto_printExceptionAndRethrow("InstrumentationKey=fake-ikey;LiveEndpoint=https:////~!@#$%&^*()_{}{}><?<?>:L\":\"_+_+_");
+        parseInto_printExceptionAndRethrow("InstrumentationKey=fake-ikey;LiveEndpoint=httpx://host");
     }
 
     @Test
